--- a/eecs4413-project/WebContent/WEB-INF/web.xml
+++ b/eecs4413-project/WebContent/WEB-INF/web.xml
@@ -24,4 +24,9 @@
     <param-name>INTERVAL_TO_QUERY_CATEGORIES</param-name>
     <param-value>3600</param-value>
   </context-param>
+  <context-param>
+    <param-name>STYLE_SHEET</param-name>
+    <param-value>/XML/style.xsl</param-value>
+  </context-param>
+  
 </web-app>
